Fixed overlapping text in case studies. Fixed divider bug. Added new line

--- a/site/components/case-study/style.css
+++ b/site/components/case-study/style.css
@@ -47,6 +47,8 @@
   color: white;
   text-align: center;
   padding: 30px;
+  box-sizing: border-box;
+  max-width: 100%;
 }
 
 .caseCompanies {
