--- a/site/css/_divider.css
+++ b/site/css/_divider.css
@@ -10,10 +10,8 @@
   right: -6px;
   width: 50%;
   height: 10px;
-  top: 0px;
+  top: -9px;
   transform: skew(-40deg);
-  margin-top: -10px;
-
   background-color: red;
 }
 
